--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,7 +88,7 @@ checkout:
     - git checkout $CI_COMMIT_SHA
     - git clone -q git@magit1.mpie.de:damask/PRIVATE.git
     - source $DAMASKROOT/DAMASK_env.sh
-    - make install
+    - make processing
   except:
     - master
     - release
@@ -184,7 +184,7 @@ Compile_Intel:
   stage: compileSpectralIntel 
   script:
     - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
-    - SpectralAll_compileIfort/test.py
+    - SpectralAll_compile/test.py
   except:
     - master
     - release
@@ -194,7 +194,7 @@ Compile_GNU:
   stage: compileSpectralGNU
   script:
     - module load $GNUCompiler $MPICH_GNU $PETSc_MPICH_GNU
-    - SpectralAll_compileGfortran/test.py
+    - SpectralAll_compile/test.py
   except:
     - master
     - release
@@ -204,7 +204,7 @@ Compile_Intel_Prepare:
   stage: prepareSpectral
   script:
     - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
-    - make -C $DAMASKROOT clean spectral install tidy
+    - make clean spectral processing
   except:
     - master
     - release
