--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -436,7 +436,7 @@ mergeIntoMaster:
     - git push origin master                                                                        # master is now tested version and has updated VERSION file
     - git checkout development
     - git pull
-    - git merge master -s ours                                                                      # only possible conflict is in VERSION file
+    - git merge master -s ours -m "[skip ci] Merge branch 'master' into development"                # only possible conflict is in VERSION file
     - git push origin development                                                                   # development is unchanged (as master is based on it) but has updated VERSION file
   only:
     - development
