--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,7 +120,6 @@ set (CMAKE_LINKER           "${PETSC_LINKER}")
 if ("${CMAKE_BUILD_TYPE}" STREQUAL "DEBUG" OR "${CMAKE_BUILD_TYPE}" STREQUAL "SYNTAXONLY" )
     set (PARALLEL "OFF")
     set (OPTI "OFF")
-    set (BUILDCMD_POST "${BUILDCMD_POST} -fsyntax-only")
 elseif ("${CMAKE_BUILD_TYPE}" STREQUAL "RELEASE")
     set (PARALLEL "ON")
     set (OPTI "DEFENSIVE")
@@ -141,6 +140,11 @@ if ("${OPENMP}" STREQUAL "")
     set (OPENMP "${PARALLEL}")
 else ()
     set(OPENMP "${OPENMP}")
+endif ()
+
+# syntax check only (mainly for pre-receive hook, works only with gfortran)
+if ("${CMAKE_BUILD_TYPE}" STREQUAL "SYNTAXONLY" )
+    set (BUILDCMD_POST "${BUILDCMD_POST} -fsyntax-only")
 endif ()
 
 # Parse DAMASK_BIN from CONFIG file
