sytaycheck only target was not working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -464,15 +464,15 @@ message ("Fortran Linker   Flags:\n${CMAKE_Fortran_LINK_EXECUTABLE}\n")
 add_subdirectory (src)
 
 # INSTALL BUILT BINARIES
-if ("${BUILD_TYPE}" STREQUAL SYNTAXONLY)
+if ("${CMAKE_BUILD_TYPE}" STREQUAL "SYNTAXONLY")
    exec_program (mktemp ARGS -d OUTPUT_VARIABLE BLACK_HOLE)
    install (PROGRAMS    ${PROJECT_BINARY_DIR}/src/prec.mod
             DESTINATION ${BLACK_HOLE})
 else ()
-   if ("${PROJECT_NAME}" STREQUAL DAMASK_spectral)
+   if ("${PROJECT_NAME}" STREQUAL "DAMASK_spectral")
        install (PROGRAMS    ${PROJECT_BINARY_DIR}/src/DAMASK_spectral
                 DESTINATION ${CMAKE_INSTALL_PREFIX})
-   elseif ("${PROJECT_NAME}" STREQUAL DAMASK_FEM)
+   elseif ("${PROJECT_NAME}" STREQUAL "DAMASK_FEM")
        install (PROGRAMS    ${PROJECT_BINARY_DIR}/src/DAMASK_FEM
                 DESTINATION ${CMAKE_INSTALL_PREFIX})
    endif ()
