--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -185,7 +185,7 @@ if ("${PROJECT_NAME}" STREQUAL "DAMASK_spectral")
       "spectral_mech_Basic.f90")
       add_dependencies(SPECTRAL_SOLVER SPECTRAL_UTILITIES)
       list(APPEND OBJECTFILES $<TARGET_OBJECTS:SPECTRAL_SOLVER>)
-      if(NOT "${CMAKE_BUILD_TYPE}" STREQUAL SYNTAXONLY)
+      if(NOT "${CMAKE_BUILD_TYPE}" STREQUAL "SYNTAXONLY")
         add_executable(DAMASK_spectral "DAMASK_spectral.f90" ${OBJECTFILES})
         add_dependencies(DAMASK_spectral SPECTRAL_SOLVER)
       endif()
