--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -202,6 +202,9 @@ Compile_GNU:
 ###################################################################################################
 Compile_Intel_Prepare:
   stage: prepareSpectral
+  before_script: 
+    - module purge
+    - cd $DAMASKROOT
   script:
     - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
     - make clean spectral processing
