--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,10 +53,11 @@ variables:
   MPICH_Intel:                     "$MPICH3_2Intel17_0"
   # ++++++++++++ PETSc +++++++++++++++++++++++++++++++++++++++++++++++++
   PETSc3_6_4MPICH3_2Intel17_0:     "Libraries/PETSc/3.6.4/Intel-17.0-MPICH-3.2"
+  PETSc3_7_6MPICH3_2Intel17_0:     "Libraries/PETSc/3.7.5/Intel-17.0-MPICH-3.2"
   PETSc3_7_5MPICH3_2Intel17_0:     "Libraries/PETSc/3.7.5/Intel-17.0-MPICH-3.2"
   PETSc3_7_5MPICH3_2GNU5_3:        "Libraries/PETSc/3.7.5/GNU-5.3-MPICH-3.2"
   # ------------ Defaults ----------------------------------------------
-  PETSc_MPICH_Intel:               "$PETSc3_7_5MPICH3_2Intel17_0"
+  PETSc_MPICH_Intel:               "$PETSc3_7_6MPICH3_2Intel17_0"
   PETSc_MPICH_GNU:                 "$PETSc3_7_5MPICH3_2GNU5_3"
   # ++++++++++++ FEM +++++++++++++++++++++++++++++++++++++++++++++++++++
   Abaqus2016:                      "FEM/Abaqus/2016"
