tried to adjust to Cereceda IJP paper

--- a/examples/ConfigFiles/Phase_DisloUCLA_Tungsten.config
+++ b/examples/ConfigFiles/Phase_DisloUCLA_Tungsten.config
@@ -29,21 +29,20 @@ SolidSolutionStrength 0.0           # Strength due to elements in solid solution
 #per family
 Nslip               12  0        
 slipburgers         2.72e-10                # Burgers vector of slip system [m]
-rhoedge0            1.0e12                  # Initial edge dislocation density [m/m**3] 1.0e12
+rhoedge0            1.0e12                  # Initial edge dislocation density [m/m**3]
 rhoedgedip0         1.0                     # Initial edged dipole dislocation density [m/m**3]
-Qedge               2.725e-19               # Activation energy for dislocation glide [J]
-v0                  3693.4                  # Initial glide velocity [m/s] 1.0e-4 (kmC 3693.4 ; 755.59)
+Qedge               2.61154e-19             # Activation energy for dislocation glide [J], 1.63 eV
+v0                  1                       # Initial glide velocity [m/s]
 p_slip              0.86                    # p-exponent in glide velocity
 q_slip              1.69                    # q-exponent in glide velocity
 tau_peierls         2.03e9                  # peierls stress [Pa]
 
 #mobility law
-kink_height	    2.567e-10                   # kink height sqrt(6)/3*lattice_parameter [m]	    
-omega		    9.1e11	                        # attemp frequency (from kMC paper) [s^(-1)]	    
+kink_height	    2.567e-10                   # kink height sqrt(6)/3*lattice_parameter [m]
+omega		        9.1e11	                    # attemp frequency (from kMC paper) [s^(-1)]
 kink_width	    29.95e-10                   # kink pair width ~ 11 b (kMC paper) [m]
-dislolength	    78.0e-10	                  # dislocation length (ideally lambda) [m] initial value 25b
-friction_coeff      8.3e-5                  # friction coeff. B (kMC)  [Pa*s]  
-#
+dislolength	    78e-10	                    # dislocation length (ideally lambda) [m] initial value 11b
+friction_coeff  8.3e-5                      # friction coeff. B [Pa*s]
 
 #hardening
 dipoleformationfactor 0                     # to have hardening due to dipole formation off
@@ -52,5 +51,5 @@ D0                  4.0e-5                  # Vacancy diffusion prefactor [m**2/
 Qsd                 4.5e-19                 # Activation energy for climb [J]
 Catomicvolume       1.0                     # Adj. parameter controlling the atomic volume [in b]
 Cedgedipmindistance 1.0                     # Adj. parameter controlling the minimum dipole distance [in b]
-interaction_slipslip     0.0625 0.0625 0.72 0.05 0.09 0.06 # Queyreau 
-#nonschmid_coefficients   0 0.56 0.75 0 0 0 #??????????????
+interaction_slipslip     0.009 0.009 0.72 0.05 009 006
+nonschmid_coefficients   0.938 0.71 4.43 0.0 0.0 0.0
