--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -174,8 +174,10 @@ if ("${PROJECT_NAME}" STREQUAL "DAMASK_spectral")
       list(APPEND OBJECTFILES $<TARGET_OBJECTS:SPECTRAL_SOLVER>)
       if(NOT "${CMAKE_BUILD_TYPE}" STREQUAL "SYNTAXONLY")
         add_executable(DAMASK_spectral "DAMASK_spectral.f90" ${OBJECTFILES})
-        add_dependencies(DAMASK_spectral SPECTRAL_SOLVER)
+      else()
+        add_library(DAMASK_spectral OBJECT "DAMASK_spectral.f90")
       endif()
+      add_dependencies(DAMASK_spectral SPECTRAL_SOLVER)
 elseif ("${PROJECT_NAME}" STREQUAL "DAMASK_FEM")
       add_library(FEM_UTILITIES OBJECT "FEM_utilities.f90")
       add_dependencies(FEM_UTILITIES DAMASK_CPFE)
