--- a/examples/ConfigFiles/Phase_Dislotwin_TWIP-Steel-FeMnC.config
+++ b/examples/ConfigFiles/Phase_Dislotwin_TWIP-Steel-FeMnC.config
@@ -43,7 +43,7 @@ q_slip              1.0             # q-exponent in glide velocity
 CLambdaSlip         10.0            # Adj. parameter controlling dislocation mean free path
 D0                  4.0e-5          # Vacancy diffusion prefactor [m**2/s]
 Qsd                 4.5e-19         # Activation energy for climb [J]
-Catomicvolume       1.0             # Adj. parameter controlling the atomic volume [in b]
+Catomicvolume       1.0             # Adj. parameter controlling the atomic volume [in b^3]
 Cedgedipmindistance 1.0             # Adj. parameter controlling the minimum dipole distance [in b]
 atol_rho            1.0
 interactionSlipSlip 0.122 0.122 0.625 0.07 0.137 0.122 # Interaction coefficients (Kubin et al. 2008)
