--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -74,6 +74,7 @@ add_library (PLASTIC OBJECT
   "plastic_disloUCLA.f90"
   "plastic_isotropic.f90"
   "plastic_phenopowerlaw.f90"
+  "plastic_kinematichardening.f90"
   "plastic_titanmod.f90"
   "plastic_nonlocal.f90"
   "plastic_none.f90"
