--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -74,10 +74,8 @@ add_library (PLASTIC OBJECT
   "plastic_disloUCLA.f90"
   "plastic_isotropic.f90"
   "plastic_phenopowerlaw.f90"
-  "plastic_titanmod.f90"
   "plastic_nonlocal.f90"
-  "plastic_none.f90"
-  "plastic_phenoplus.f90")
+  "plastic_none.f90")
 add_dependencies(PLASTIC DAMASK_HELPERS)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:PLASTIC>)
 
