--- a/examples/ConfigFiles/numerics.config
+++ b/examples/ConfigFiles/numerics.config
@@ -49,7 +49,7 @@ maxVolDiscrepancy_RGC     1.0e-5       # maximum allowable relative volume discr
 volDiscrepancyMod_RGC     1.0e+12
 discrepancyPower_RGC      5.0
 
-fixed_seed                0            # put any number larger than zero, integer, if you want to have a pseudo random distribution
+random_seed               0            # any integer larger than zero seeds the random generator, otherwise random seeding
 
 ## spectral parameters ##
 err_div_tolAbs            1.0e-3       # absolute tolerance for fulfillment of stress equilibrium
