simple test, only ensures that scatter is not bigger than 2 FWHM (hard max)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -324,6 +324,13 @@ HybridIA:
     - master
     - release
 
+TextureComponents:
+  stage: spectral
+  script: TextureComponents/test.py
+  except:
+    - master
+    - release
+
 ###################################################################################################
 Marc_compileIfort2014:
   stage: compileMarc2014
