--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,24 +51,24 @@ variables:
   # ++++++++++++ Compiler ++++++++++++++++++++++++++++++++++++++++++++++
   IntelCompiler16_0:               "Compiler/Intel/16.0 Libraries/IMKL/2016"
   IntelCompiler17_0:               "Compiler/Intel/17.0 Libraries/IMKL/2017"
+  IntelCompiler18_1:               "Compiler/Intel/18.1 Libraries/IMKL/2018"
   GNUCompiler5_3:                  "Compiler/GNU/5.3"
   # ------------ Defaults ----------------------------------------------
-  IntelCompiler:                   "$IntelCompiler17_0"
+  IntelCompiler:                   "$IntelCompiler18_1"
   GNUCompiler:                     "$GNUCompiler5_3"
   # ++++++++++++ MPI +++++++++++++++++++++++++++++++++++++++++++++++++++
   MPICH3_2Intel17_0:               "MPI/Intel/17.0/MPICH/3.2"
-  MPICH3_2GNU5_3:                  "MPI/GNU/5.3/MPICH/3.2"
+  MPICH3_2Intel18_1:               "MPI/Intel/18.1/MPICH/3.2.1"
+  MPICH3_2GNU5_3:                  "MPI/GNU/5.3/MPICH/3.2.1"
   # ------------ Defaults ----------------------------------------------
   MPICH_GNU:                       "$MPICH3_2GNU5_3"
-  MPICH_Intel:                     "$MPICH3_2Intel17_0"
+  MPICH_Intel:                     "$MPICH3_2Intel18_1"
   # ++++++++++++ PETSc +++++++++++++++++++++++++++++++++++++++++++++++++
-  PETSc3_7_6MPICH3_2Intel17_0:     "Libraries/PETSc/3.7.6/Intel-17.0-MPICH-3.2"
-  PETSc3_7_5MPICH3_2Intel17_0:     "Libraries/PETSc/3.7.5/Intel-17.0-MPICH-3.2"
-  PETSc3_6_4MPICH3_2Intel17_0:     "Libraries/PETSc/3.6.4/Intel-17.0-MPICH-3.2"
-  PETSc3_7_5MPICH3_2GNU5_3:        "Libraries/PETSc/3.7.5/GNU-5.3-MPICH-3.2"
+  PETSc3_9_1MPICH3_2Intel18_1:     "Libraries/PETSc/3.9.1/Intel-18.1-MPICH-3.2.1"
+  PETSc3_9_1MPICH3_2GNU5_3:        "Libraries/PETSc/3.9.1/GNU-5.3-MPICH-3.2.1"
   # ------------ Defaults ----------------------------------------------
-  PETSc_MPICH_Intel:               "$PETSc3_7_6MPICH3_2Intel17_0"
-  PETSc_MPICH_GNU:                 "$PETSc3_7_5MPICH3_2GNU5_3"
+  PETSc_MPICH_Intel:               "$PETSc3_9_1MPICH3_2Intel18_1"
+  PETSc_MPICH_GNU:                 "$PETSc3_9_1MPICH3_2GNU5_3"
   # ++++++++++++ FEM +++++++++++++++++++++++++++++++++++++++++++++++++++
   Abaqus2016:                      "FEM/Abaqus/2016"
   Abaqus2017:                      "FEM/Abaqus/2017"
