typo in new compiler switches

--- a/installation/mods_Abaqus/abaqus_v6.env
+++ b/installation/mods_Abaqus/abaqus_v6.env
@@ -26,15 +26,16 @@ fortCmd = "ifort"
 # -ftz                            flush underflow to zero
 # -diag-disable 5268              disable warnings about line length > 132 (only comments there anyway)
 # -implicitnone                   assume no implicit types (e.g. i for integer)
-# -assume nostd_std_mod_proc_name avoid problems with libraries compiled without that option
+# -standard-semantics             sets standard (Fortran 2008) and some other conventions
+# -assume nostd_mod_proc_name     avoid problems with libraries compiled without that option
 # -real-size 64 -DFLOAT=8         assume size of real to be 8 bytes, matches our definition of pReal
 # -integer-size 32 -DINT=4        assume size of integer to be 4 bytes, matches our definition of pInt
 
 compile_fortran = (fortCmd + " -c -fPIC -auto -shared-intel " + 
                    "-I%I -free -O1 -fpp -openmp " +
                    "-ftz -diag-disable 5268 " +
-                   "-implicitnone -stand f08 -standard-semantics " +
-                   "-assume nostd_std_mod_proc_name " +
+                   "-implicitnone -standard-semantics " +
+                   "-assume nostd_mod_proc_name " +
                    "-real-size 64 -integer-size 32 -DFLOAT=8 -DINT=4 " +
                    '-DDAMASKVERSION=\\\"%s\\\"'%DAMASKVERSION)
 
